--- a/src/pages/pl/index.astro
+++ b/src/pages/pl/index.astro
@@ -60,7 +60,7 @@ const lang = 'pl';
         </div>
         <div class="w-full md:w-1/2 flex justify-center">
           <img
-            src="/images/values-section.svg"
+            src="/images/landing-section-hand.svg"
             alt="Our Values"
             class="max-w-xs md:max-w-sm lg:max-w-md"
           />
