--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "/src/layouts/Layout.astro";
+import Layout from "../layouts/Layout.astro";
 
 // Define metadata and navigation links for this page
 const title = "Mends";
