--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -263,11 +263,11 @@ const lang = "pl";
         Our Patient-Centric Approach
       </h2>
       <div
-        class="grid grid-cols-3 justify-center content-center text-lg md:text-xl text-rhino gap-12"
+        class="grid grid-cols-1 md:grid-cols-3 justify-center content-center text-lg md:text-xl text-rhino gap-12"
       >
         <div class="step p-10 rounded-full aspect-square shadow-lg relative flex flex-col justify-center">
           <div
-            class="text-8xl leading-0 font-bold w-full text-hippie-blue"
+            class="text-6xl md:text-8xl leading-0 font-bold w-full text-hippie-blue"
           >
             1
           </div>
@@ -276,7 +276,7 @@ const lang = "pl";
         </div>
         <div class="step p-10 rounded-full aspect-square shadow-lg relative flex flex-col justify-center">
           <div
-            class="text-8xl leading-0 font-bold w-full text-hippie-blue"
+            class="text-6xl md:text-8xl leading-0 font-bold w-full text-hippie-blue"
           >
             2
           </div>
@@ -285,7 +285,7 @@ const lang = "pl";
         </div>
         <div class="step p-10 rounded-full aspect-square shadow-lg relative flex flex-col justify-center">
           <div
-            class="text-8xl leading-0 font-bold w-full text-hippie-blue"
+            class="text-6xl md:text-8xl leading-0 font-bold w-full text-hippie-blue"
           >
             3
           </div>
