--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -25,6 +25,7 @@ import "../styles/global.css";
     name="viewport"
     content="width=device-width, initial-scale=1, viewport-fit=cover"
   />
+  <link rel="manifest" href="/manifest.json" />
   <meta name="generator" content="Astro" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content={url} />
