--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -23,7 +23,7 @@ import "../styles/global.css";
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta
     name="viewport"
-    content="width=device-width, initial-scale=1, viewport-fit=cover"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
   />
   <link rel="manifest" href="/manifest.json" />
   <meta name="generator" content="Astro" />
