--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="col-span-2">
+<footer class="col-span-2 sticky bottom-0">
   <div class="flex justify-between items-center m-3 md:m-6">
     <div>
       <p class="text-sm">© 2024 Mends OÜ. Tallin, Estonia.</p>
