--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,9 +20,11 @@ const { title, description, lang, navLinks } = Astro.props as LayoutProps;
 
 <html lang={lang}>
   <Head title={title} description={description} />
-  <body class="container mx-auto grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr_auto] grid-flow-row gap-0 max-h-screen h-screen bg-white">
-    <Header svgClasses="h-[38px] md:h-[62px]"/>
-    <Navigation navLinks={navLinks} svgClasses="h-[18px] md:h-[29px]"/>
+  <body x-data="{ isActive: false }"
+    class="container mx-auto grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr_auto] grid-flow-row gap-0 max-h-screen h-screen bg-white"
+  >
+    <Header svgClasses="h-[38px] md:h-[62px]" />
+    <Navigation navLinks={navLinks} svgClasses="h-[18px] md:h-[29px]" />
     <Main>
       <slot />
     </Main>
