--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -2,6 +2,6 @@
 // Main.astro
 ---
 
-<main  class="col-span-2 overflow-auto sm:shadow-xl sm:rounded-3xl bg-hippie-blue-50 peer-[.nav-active]:opacity-0 peer-[.nav-active]:h-0 peer-[.nav-active]:p-0 transition-opacity duration-500 no-scrollbar peer">
+<main  class="col-span-2 overflow-auto shadow-xl rounded-3xl bg-hippie-blue-50 peer-[.nav-active]:opacity-0 peer-[.nav-active]:h-0 peer-[.nav-active]:p-0 transition-opacity duration-500 no-scrollbar peer">
   <slot />
 </main>
