--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
 ---
 
 <!-- Header Component -->
-<header class="row-span-1 col-span-1 w-full sticky top-0">
+<header class="row-span-1 col-span-1 w-full">
   <div class="flex justify-between items-center p-3 md:p-6">
     <!-- Logo Component with a desired height of 100 -->
     <Logo svgClasses=`${svgClasses}`/>
