--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,10 +20,10 @@ const { title, description, lang, navLinks } = Astro.props as LayoutProps;
 
 <html lang={lang}>
   <Head title={title} description={description} />
-  <body
-    x-data="{ isNavActive: false }" class="container mx-auto"
-  >
-    <div class="fixed h-full max-h-full grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr_auto] grid-flow-row gap-0 bg-white">
+  <body x-data="{ isNavActive: false }" class="container mx-auto">
+    <div
+      class="fixed h-full max-h-full grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr_auto] grid-flow-row gap-0 bg-white"
+    >
       <Header svgClasses="h-[38px] md:h-[62px]" />
       <Navigation navLinks={navLinks} svgClasses="h-[18px] md:h-[29px]" />
       <Main>
