--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -11,7 +11,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
 ---
 
 <button
-  class="block p-3 md:p-6 m-3 peer nav-button"
+  class="block p-3 md:p-6 mt-auto peer nav-button"
   @click="isNavActive = !isNavActive"
   :class="{ 'nav-active': isNavActive }"
 >
@@ -24,22 +24,46 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
     width="100%"
     height="100%"
   >
+    <defs>
+      <linearGradient
+      id="rhinoToPaleLeafBottom"
+      x1="0%"
+      y1="0%"
+      x2="0%"
+      y2="100%"
+    >
+      <stop offset="0%" stop-color="#39435E">
+        <animate
+          attributeName="stop-color"
+          values="#39435E; #38668D; #6AA2BC; #38668D; #39435E"
+          dur="12s"
+          repeatCount="indefinite"></animate>
+      </stop>
+      <stop offset="100%" stop-color="#38668D">
+        <animate
+          attributeName="stop-color"
+          values="#38668D; #6AA2BC; #C5D9BC; #6AA2BC; #38668D"
+          dur="12s"
+          repeatCount="indefinite"></animate>
+      </stop>
+    </linearGradient>    </defs>
+
     <rect
-      fill="#6AA2BC"
+      fill="url(#rhinoToPaleLeafBottom)"
       x="0"
       y="0"
       width="262"
       height="62"
       rx="30.99997"
       ry="30.99997"></rect><rect
-      fill="#6AA2BC"
+      fill="url(#rhinoToPaleLeafBottom)"
       x="0"
       y="100"
       width="262"
       height="62"
       rx="30.14894"
       ry="30.14894"></rect><rect
-      fill="#6AA2BC"
+      fill="url(#rhinoToPaleLeafBottom)"
       x="0"
       y="200"
       width="262"
