--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -2,6 +2,10 @@
 // Main.astro
 ---
 
-<main  class="col-span-2 overflow-auto shadow-xl rounded-3xl bg-hippie-blue-50 peer-[.nav-active]:opacity-0 peer-[.nav-active]:h-0 peer-[.nav-active]:p-0 transition-opacity duration-500 no-scrollbar peer">
+<main
+  class="col-span-2 overflow-auto shadow-xl rounded-3xl bg-hippie-blue-50 no-scrollbar transition-all duration-300 ease-in-out"
+  :class="showNav ? 'max-h-0 opacity-0 overflow-hidden' : 'max-h-screen opacity-100'"
+>
+
   <slot />
 </main>
