--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -3,9 +3,11 @@
 ---
 
 <main
-  class="col-span-2 overflow-auto shadow-xl rounded-3xl bg-hippie-blue-50 no-scrollbar transition-all duration-300 ease-in-out"
-  :class="showNav ? 'max-h-0 opacity-0 overflow-hidden' : 'max-h-screen opacity-100'"
->
+  class="col-span-2 overflow-scroll shadow-xl rounded-3xl bg-hippie-blue-50 no-scrollbar"
+  x-show="!showNav"
+  x-transition.opacity
+  x-ref="mainContainer"
 
+>
   <slot />
 </main>
