--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -14,11 +14,13 @@ const {
 } = Astro.props;
 
 import "../styles/global.css";
+import { ViewTransitions } from "astro:transitions";
 ---
 
 <head>
   <meta charset="UTF-8" />
   <title>{title}</title>
+  <ViewTransitions />
   <meta name="description" content={description} />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta
