--- a/src/components/NavigationButton.astro
+++ b/src/components/NavigationButton.astro
@@ -2,7 +2,11 @@
 const { svgClasses = "" } = Astro.props; // Default to empty string if no classes are provided
 ---
 
-<button class="block p-3 md:p-6 mt-auto peer nav-button" @click="showNav = !showNav">
+<button
+  class="block p-3 md:p-6 mt-auto peer nav-button"
+  @click="showNav = !showNav"
+  x-cloak
+>
   <!--?xml version="1.0" encoding="UTF-8"?-->
   <svg
     class=`${svgClasses}`
