--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title, description, lang, navLinks } = Astro.props as LayoutProps;
 
 <html lang={lang}>
   <Head title={title} description={description} />
-  <body x-data="{ showNav: false }" class="container mx-auto">
+  <body x-data="{ showNav: false, navStyle: '' }" class="container mx-auto">
     <div
       class="h-screen container w-full fixed grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr_auto] grid-flow-row gap-0 bg-white"
     >
