--- a/src/layouts/LayoutWithoutNavigation.astro
+++ b/src/layouts/LayoutWithoutNavigation.astro
@@ -9,20 +9,25 @@ import Main from "../components/Main.astro";
 interface LayoutProps {
   title: string;
   description: string;
+  lang: string;
   navLinks: { text: string; href: string }[];
 }
 
 // Destructure props passed to the layout
-const { title, description, navLinks } = Astro.props as LayoutProps;
+const { title, description, lang, navLinks } = Astro.props as LayoutProps;
 ---
 
-<html lang="en">
+<html lang={lang}>
   <Head title={title} description={description} />
-  <body class="container fixed sm:relative mx-auto grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr_auto] grid-flow-row gap-0 min-h-full h-full">
-    <Header />
-    <Main>
-      <slot />
-    </Main>
-    <Footer />
+  <body x-data="{ showNav: false, navStyle: '' }" class="container mx-auto">
+    <div
+      class="h-screen container w-full fixed grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr_auto] grid-flow-row gap-0 bg-white"
+    >
+      <Header svgClasses="h-[38px] md:h-[62px]" />
+      <Main>
+        <slot />
+      </Main>
+      <Footer />
+    </div>
   </body>
 </html>
