--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -16,9 +16,9 @@ const navLinks: NavLink[] = Astro.props.navLinks;
   @click="showNav = false"
   :style="navStyle"
   :class="showNav ? '' : 'hidden'"
-  x-init="navStyle = `width: ${$refs.mainContainer.offsetWidth}px; height: ${$refs.mainContainer.offsetHeight}px; top: ${$refs.mainContainer.offsetTop}px; left: ${$refs.mainContainer.offsetLeft}px;`"
   class="absolute z-50 overflow-auto px-10 shadow-xl rounded-3xl bg-hippie-blue h-auto"
 >
+<!--recalculate height realtime when container size changes? -->
   <ul
     class="flex grow-1 flex-col h-full w-full justify-center content-center gap-0 font-display"
   >
