--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,11 @@
 ---
 // Import necessary components
-import Head from "../components/Head.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import Main from "../components/Main.astro";
-import Navigation from "../components/Navigation.astro";
-import NavigationButton from "../components/NavigationButton.astro";
+import Head from "../components/common/Head.astro";
+import Header from "../components/common/Header.astro";
+import Footer from "../components/common/Footer.astro";
+import Main from "../components/common/Main.astro";
+import Navigation from "../components/common/Navigation.astro";
+import NavigationButton from "../components/common/NavigationButton.astro";
 
 // Define the expected props for the layout
 interface LayoutProps {
