--- a/src/layouts/LayoutWithoutNavigation.astro
+++ b/src/layouts/LayoutWithoutNavigation.astro
@@ -1,9 +1,9 @@
 ---
 // Import necessary components
-import Head from "../components/Head.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import Main from "../components/Main.astro";
+import Head from "../components/common/Head.astro";
+import Header from "../components/common/Header.astro";
+import Footer from "../components/common/Footer.astro";
+import Main from "../components/common/Main.astro";
 
 // Define the expected props for the layout
 interface LayoutProps {
