--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ const lang = "pl";
   At Mends, we're <strong>leveraging AI and telemedicine</strong> to bring you closer to your health goals, wherever you are.
 </HeroSection>
 
-  <section class="py-12 md:py-24 bg-white">
+  <section class="py-12 md:py-24 bg-white" id="values">
     <div class="container mx-auto px-4 back">
       <div class="flex flex-wrap items-center justify-center">
         <div class="w-full md:w-1/2 mb-8 md:mb-0 max-w-lg">
