Title: `feat(UI): update color scheme and text alignments`
Body:
Updated the tailwind.config.js file to modify the color scheme. New 'brandy' and 'apricot' colors have been added while existing colors have been reformatted for consistency.
For the HeroSection.astro component, changed the button background color to use the new 'apricot' color.
Also corrected a minor spelling error from 'nibmlesness' to 'nimblesness' in the index.astro page source image reference.
Whitespace inconsistency in 404.astro was fixed to improve code readability.
Added an id attribute to a section of the home page to facilitate possible future referencing or navigation.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,7 @@ const lang = 'pl';
 		imageUrl="/images/landing-hero-01.svg"
 		buttonText="Discover Our Vision"
 		buttonLink="#values"
+    id="home"
 	>
 		At Mends, we're <strong>leveraging AI and telemedicine</strong> to bring you
 		closer to your health goals, wherever you are.
@@ -133,7 +134,7 @@ const lang = 'pl';
 					class="w-full md:w-1/2 lg:w-1/2 flex justify-center px-4 mb-8 md:mb-0"
 				>
 					<img
-						src="/images/landing-nibmlesness-01.svg"
+						src="/images/landing-nimblesness-01.svg"
 						alt="Adaptable Solutions"
 						class="max-w-xs md:max-w-sm lg:max-w-lg h-auto"
 					/>
