--- a/src/components/sections/HeroSection.astro
+++ b/src/components/sections/HeroSection.astro
@@ -20,7 +20,7 @@ const { title, imageUrl, buttonText, buttonLink, id } = Astro.props;
 		<p class="text-xl md:text-2xl mb-8 text-rhino"><slot /></p>
 		<a
 			href={buttonLink}
-			class="inline-block bg-matisse text-white font-bold py-2 px-6 rounded-full hover:bg-hippie-blue transition duration-300"
+			class="inline-block bg-apricot text-white font-bold py-2 px-6 rounded-full hover:bg-hippie-blue transition duration-300"
 			>{buttonText}</a
 		>
 	</div>
