Commit Title: `refactor(ui): enhance navigation button interactions`
Commit Description:

This commit refactors the UI elements, specifically the Logo and NavigationButton components.

1. For the 'Logo' component:
     - Standardized the linear gradient id naming convention for easier reference. All spaces have been replaced with hyphens.
     - The formatting of some SVG elements was also adjusted for better readability.

2. For the 'NavigationButton' component:
    - Introduced an opacity transition effect on hover; the original icon becomes transparent and a new icon with a different color scheme appears.
    - Added SVG elements were integrated to achieve the above effect.

No breaking functionality changes were made. This refactor purely aims to improve user experience by making the interface more intuitive and aesthetically pleasing.

It's recommended to perform thorough testing to ensure unintended effects haven't been introduced due to these changes.

--- a/src/components/common/Logo.astro
+++ b/src/components/common/Logo.astro
@@ -5,9 +5,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
 
 <div class="group relative">
   <a href="/">
-    <div
-      class="group-hover:opacity-0 transition-opacity duration-1000"
-    >
+    <div class="group-hover:opacity-0 transition-opacity duration-1000">
       <svg
         class=`${svgClasses}`
         id="uuid-1b4e8324-ee6d-4a56-b6c9-dd3ce84908a2"
@@ -18,7 +16,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
       >
         <defs>
           <linearGradient
-            id="matisseToFrostBottom"
+            id="mattise-to-frost-bottom"
             x1="0%"
             y1="0%"
             x2="0%"
@@ -40,7 +38,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
             </stop>
           </linearGradient>
           <linearGradient
-            id="matisseToFrostTop"
+            id="mattise-to-frost-top"
             x1="0%"
             y1="0%"
             x2="0%"
@@ -62,7 +60,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
             </stop>
           </linearGradient>
           <linearGradient
-            id="rhinoToPaleLeafBottom"
+            id="rhino-to-pale-leaf-bottom"
             x1="0%"
             y1="0%"
             x2="0%"
@@ -84,7 +82,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
             </stop>
           </linearGradient>
           <linearGradient
-            id="rhinoToPaleLeafTop"
+            id="rhino-to-pale-leaf-top"
             x1="0%"
             y1="0%"
             x2="0%"
@@ -113,7 +111,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
           height="62"
           rx="30.99997"
           ry="30.99997"
-          fill="url(#rhinoToPaleLeafTop)"></rect>
+          fill="url(#rhino-to-pale-leaf-top)"></rect>
         <rect
           x="300"
           y="0"
@@ -121,7 +119,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
           height="62"
           rx="30.99997"
           ry="30.99997"
-          fill="url(#rhinoToPaleLeafTop)"></rect>
+          fill="url(#rhino-to-pale-leaf-top)"></rect>
         <rect
           x="300"
           y="100"
@@ -129,7 +127,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
           height="62"
           rx="30.99997"
           ry="30.99997"
-          fill="url(#rhinoToPaleLeafTop)"></rect>
+          fill="url(#rhino-to-pale-leaf-top)"></rect>
         <rect
           x="300"
           y="300"
@@ -137,7 +135,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
           height="262"
           rx="30.99997"
           ry="30.99997"
-          fill="url(#matisseToFrostTop)"></rect>
+          fill="url(#mattise-to-frost-top)"></rect>
         <rect
           x="200"
           y="300"
@@ -145,7 +143,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
           height="262"
           rx="30.99997"
           ry="30.99997"
-          fill="url(#rhinoToPaleLeafBottom)"></rect>
+          fill="url(#rhino-to-pale-leaf-bottom)"></rect>
         <rect
           x="100"
           y="338"
@@ -153,7 +151,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
           height="162"
           rx="30.99997"
           ry="30.99997"
-          fill="url(#rhinoToPaleLeafBottom)"></rect>
+          fill="url(#rhino-to-pale-leaf-bottom)"></rect>
         <rect
           x="0"
           y="300"
@@ -161,7 +159,7 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
           height="262"
           rx="30.99997"
           ry="30.99997"
-          fill="url(#rhinoToPaleLeafBottom)"></rect>
+          fill="url(#rhino-to-pale-leaf-bottom)"></rect>
         <rect
           x="0"
           y="0"
@@ -169,25 +167,25 @@ const { svgClasses = "" } = Astro.props; // Default to empty string if no classe
           height="262"
           rx="130.99987"
           ry="130.99987"
-          fill="url(#matisseToFrostBottom)"></rect>
+          fill="url(#mattise-to-frost-bottom)"></rect>
         <path
-          fill="url(#rhinoToPaleLeafBottom)"
+          fill="url(#rhino-to-pale-leaf-bottom)"
           d="m821.79792,400.54365c0-26.05362-11.74156-40.36427-33.39245-40.36427-21.64947,0-33.39103,14.31064-33.39103,40.36427v130.26597c0,17.61304-11.37597,29.35531-31.9244,29.35531-19.44882,0-31.19037-11.74227-31.19037-29.35531v-130.26597c0-26.05362-11.74298-40.36427-33.39245-40.36427s-33.39245,14.31064-33.39245,40.36427v130.26597c0,17.61304-10.64052,29.35531-31.19037,29.35531-20.54843,0-31.9244-11.74227-31.9244-29.35531v-130.26597c0-76.6921,37.42959-99.0756,96.50722-99.0756,26.42063,0,48.80413,8.43987,64.94984,31.19037,16.14571-22.75051,38.5292-31.19037,64.94841-31.19037,61.28113,0,96.50722,29.35602,96.50722,99.0756v130.26597c0,17.61304-11.37454,29.35531-31.9244,29.35531-20.54843,0-31.19037-11.74227-31.19037-29.35531v-130.26597Z"
         ></path>
         <path
-          fill="url(#rhinoToPaleLeafBottom)"
+          fill="url(#rhino-to-pale-leaf-bottom)"
           d="m975.18355,459.622v37.79518c16.51272,4.03643,32.29141,5.13746,55.40893,5.13746,23.48453,0,41.83232-1.46805,59.44465-5.13746,17.61376-3.66941,30.09076,12.8433,30.09076,28.98901,0,10.64123-5.50519,21.28246-18.34778,26.05291-17.98077,6.6048-44.39998,8.80688-82.19658,8.80688-24.58415,0-106.78073-1.46805-106.78073-30.45635v-198.1512c0-28.9883,82.19658-30.45635,106.78073-30.45635,37.7966,0,64.58282,1.83435,82.56359,8.07285,12.84259,4.40344,18.34636,14.67766,18.34636,25.31889,0,16.14571-12.84259,33.39245-30.45635,30.09005-16.14571-2.9361-33.02401-4.77045-55.77452-4.77045-24.58557,0-41.4653,1.10104-59.07906,4.03643v35.96083h71.55464c21.64947,0,31.55739,9.54019,31.55739,29.35531,0,19.44811-9.90792,29.35602-31.55739,29.35602h-71.55464Z"
         ></path>
         <path
-          fill="url(#rhinoToPaleLeafBottom)"
+          fill="url(#rhino-to-pale-leaf-bottom)"
           d="m1310.20197,422.92715c0-53.20686-28.9883-64.21581-55.40893-64.21581-26.41921,0-55.40893,11.00895-55.40893,64.21581v107.88248c0,21.28246-12.47558,29.35531-31.19037,29.35531-18.71337,0-31.19037-8.07285-31.19037-29.35531v-107.51547c0-79.62749,41.83232-123.29416,117.78968-123.29416s117.78968,43.66667,117.78968,123.29416v107.51547c0,21.28246-12.47558,29.35531-31.19037,29.35531-18.71337,0-31.19037-8.07285-31.19037-29.35531v-107.88248Z"
         ></path>
         <path
-          fill="url(#rhinoToPaleLeafBottom)"
+          fill="url(#rhino-to-pale-leaf-bottom)"
           d="m1399.73596,332.29141c0-27.88797,73.02269-31.9244,102.378-31.9244,95.7732,0,139.80617,42.93264,139.80617,131,0,92.8371-49.17114,130.63299-142.00824,130.63299-30.08934,0-100.17593-4.03643-100.17593-31.9244v-197.78419Zm62.38075,173.19862c2.9361,1.46805,12.10999,5.13746,35.59452,5.13746,52.83985,0,78.15944-19.81512,78.15944-78.52646,0-68.61925-33.75946-80.36152-75.22477-80.36152-20.18142,0-29.35531,2.20208-38.5292,5.50448v148.24603Z"
         ></path>
         <path
-          fill="url(#rhinoToPaleLeafBottom)"
+          fill="url(#rhino-to-pale-leaf-bottom)"
           d="m1765.94902,562c-36.69556,0-80.36152-6.97253-97.97527-16.87973-9.5409-5.50448-13.94363-13.94434-13.94363-22.3835,0-16.51272,15.77869-33.02544,36.69414-26.05362,19.81583,6.60551,41.09829,12.10928,70.4536,12.10928,30.08934,0,51.37322-5.50377,51.37322-24.58557,0-46.96907-147.51343-4.03643-147.51343-106.78073,0-67.51821,63.48179-77.05912,104.21306-77.05912,35.59452,0,64.21581,8.43987,78.52646,15.77869,10.27493,5.13746,15.04467,14.31135,15.04467,23.48453,0,13.21032-9.90792,26.05362-26.41921,26.05362-3.67013,0-8.07285-.73403-12.477-2.20208-16.87973-5.87078-30.08934-9.9072-57.244-9.9072-24.95116,0-41.83089,3.3024-41.83089,21.64947,0,47.70309,147.14499,2.93539,147.14499,107.14845,0,69.71958-65.31685,79.62749-106.0467,79.62749Z"
         ></path>
       </svg>
