style(components): update CSS classes in NavigationButton and HeroSection
Updated the CSS classes of 'NavigationButton' and 'HeroSection' components. For 'NavigationButton', repositioned relative and group classes, and removed peer class from button. In 'HeroSection', added w-full, h-full, and aspect-square classes to the image for improved responsiveness.

--- a/src/components/common/NavigationButton.astro
+++ b/src/components/common/NavigationButton.astro
@@ -5,8 +5,8 @@ interface Props {
 const { svgClasses } = Astro.props; // Default to empty string if no classes are provided
 ---
 
-<div class="mt-auto p-3 md:p-6"><div class="group relative"><button
-  class="block peer nav-button"
+<div class="mt-auto p-3 md:p-6"><div class="relative group"><button
+  class="block nav-button"
   @click="showNav = !showNav"
   x-cloak
 >
