--- a/src/components/sections/HeroSection.astro
+++ b/src/components/sections/HeroSection.astro
@@ -13,7 +13,7 @@ const { title, imageUrl, buttonText, buttonLink, id } = Astro.props;
 	class="container mx-auto px-4 py-12 md:py-24 flex flex-wrap items-center min-h-full" id={id}
 >
 	<div class="w-full md:w-1/2 flex justify-center mb-8 md:mb-0">
-		<img src={imageUrl} alt={title} class="max-w-xs md:max-w-sm lg:max-w-md" />
+		<img src={imageUrl} alt={title} class="max-w-xs md:max-w-sm lg:max-w-md w-full h-full aspect-square" />
 	</div>
 	<div class="w-full md:w-1/2 text-center md:text-left text-matisse max-w-xl">
 		<h1 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-6">{title}</h1>
