--- a/src/components/common/Head.astro
+++ b/src/components/common/Head.astro
@@ -41,7 +41,5 @@ import { ViewTransitions } from "astro:transitions";
   <link rel="canonical" href={url} />
   <link rel="sitemap" href="/sitemap-index.xml" />
   <meta name="theme-color" content="#ffffff" />
-  <link rel="stylesheet" href="https://use.typekit.net/dwq1bvn.css" />
-  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"
-  ></script></head
+  </script></head
 >
